--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -65,6 +65,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="style\main.css" />
+    <Content Include="Timesheet.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
