--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -19,6 +19,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,7 +67,27 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\calendar.png" />
+    <Content Include="images\cmnts_gray_sml_icn.png" />
+    <Content Include="images\D_page_copy.png" />
+    <Content Include="images\D_pdf.png" />
+    <Content Include="images\next2.png" />
+    <Content Include="images\page_copy.png" />
+    <Content Include="images\pdf.png" />
+    <Content Include="images\previous2.png" />
+    <Content Include="images\trash.png" />
+    <Content Include="images\upload_excel.png" />
+    <Content Include="js\dhtmlgoodies_calendar.js" />
+    <Content Include="js\jquery-1.8.3.min.js" />
+    <Content Include="js\jquery.min.js" />
+    <Content Include="js\jsDatePick.min.1.3.js" />
+    <Content Include="js\pqgrid.min.js" />
+    <Content Include="style\bootstrap.min.css" />
+    <Content Include="style\dhtmlgoodies_calendar.css" />
+    <Content Include="style\jquery-ui.css" />
+    <Content Include="style\jsDatePick_ltr.min.css" />
     <Content Include="style\main.css" />
+    <Content Include="style\pqselect.dev.css" />
     <Content Include="Timesheet.html" />
     <Content Include="Web.config" />
   </ItemGroup>
