--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -82,6 +82,7 @@
     <Content Include="js\jquery.min.js" />
     <Content Include="js\jsDatePick.min.1.3.js" />
     <Content Include="js\pqgrid.min.js" />
+    <Content Include="mytimesheet.html" />
     <Content Include="style\bootstrap.min.css" />
     <Content Include="style\dhtmlgoodies_calendar.css" />
     <Content Include="style\jquery-ui.css" />
