--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -77,24 +77,20 @@
     <Content Include="images\previous2.png" />
     <Content Include="images\trash.png" />
     <Content Include="images\upload_excel.png" />
-    <Content Include="js\dhtmlgoodies_calendar.js" />
-    <Content Include="js\jquery-1.8.3.min.js" />
-    <Content Include="js\jquery.min.js" />
-    <Content Include="js\jsDatePick.min.1.3.js" />
-    <Content Include="js\pqgrid.min.js" />
+    <Content Include="js\jquery-1.12.4.js" />
+    <Content Include="js\jquery-ui.js" />
     <Content Include="mytimesheet.html" />
     <Content Include="style\bootstrap.min.css" />
-    <Content Include="style\dhtmlgoodies_calendar.css" />
     <Content Include="style\jquery-ui.css" />
-    <Content Include="style\jsDatePick_ltr.min.css" />
     <Content Include="style\main.css" />
-    <Content Include="style\pqselect.dev.css" />
+    <Content Include="style\style.css" />
     <Content Include="Timesheet.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
