new style and API

--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -84,7 +84,9 @@
     <Content Include="style\bootstrap.min.css" />
     <Content Include="style\jquery-ui.css" />
     <Content Include="style\main.css" />
+    <Content Include="style\mystyle.css" />
     <Content Include="style\style.css" />
+    <Content Include="time.html" />
     <Content Include="Timesheet.html" />
     <Content Include="Web.config" />
   </ItemGroup>
