--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -78,9 +78,11 @@
     <Content Include="images\previous2.png" />
     <Content Include="images\trash.png" />
     <Content Include="images\upload_excel.png" />
+    <Content Include="jsCode\login.js" />
     <Content Include="jsCode\mytimesheet.js" />
     <Content Include="js\jquery-1.12.4.js" />
     <Content Include="js\jquery-ui.js" />
+    <Content Include="login.html" />
     <Content Include="style\bootstrap.min.css" />
     <Content Include="style\jquery-ui.css" />
     <Content Include="style\main.css" />
