--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ publish/
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 #packages/
 packages.config
+APIs/packages/
 
 # Windows Azure Build Output
 csx
