--- a/UI/UI/UI.csproj
+++ b/UI/UI/UI.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Content Include="Approval.html" />
     <Content Include="DataEntities.html" />
+    <Content Include="jsCode\approval.js" />
     <Content Include="jsCode\navigation.js" />
     <Content Include="src\assets\DataEntries.json" />
     <None Include="Web.Debug.config">
