--- a/APIs/API/API.csproj
+++ b/APIs/API/API.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Models\PendingApproval.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ProjectTasks.cs" />
+    <Compile Include="Models\RequestData.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\TaskType.cs" />
     <Compile Include="Models\TimeSheetApproval.cs" />
